--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -33,7 +33,8 @@
 
     <div class="form-group d-flex justify-content-between align-items-center mb-2">
       <div class="form-check">
-        <input type="checkbox" name="remember" [(ngModel)]="isRememberMe" #remember="ngModel" class="form-check-input" id="rememberMe" />
+        <input type="checkbox" name="remember" [(ngModel)]="isRememberMe" #remember="ngModel" class="form-check-input"
+          id="rememberMe" />
         <label class="form-check-label" for="rememberMe">Remember Me</label>
       </div>
       <div>
@@ -54,17 +55,21 @@
     <div class="row mb-4">
       <div class="col-sm-6 mb-2 mb-sm-0">
         <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal" (click)="googleLogin()"
-          [disabled]="loading">
+          [disabled]="loading || authService.isFacebookLoading || authService.isGoogleLoading">
           <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20"
-            height="20" class="me-2"> Login with Google
+            height="20" class="me-2" *ngIf="!authService.isGoogleLoading">
+          <i *ngIf="authService.isGoogleLoading" class="spinner-border spinner-border-sm me-2"></i>
+          {{ authService.isGoogleLoading ? 'Processing...' : 'Login with Google' }}
         </button>
       </div>
       <div class="col-sm-6">
         <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal" (click)="facebookLogin()"
-          [disabled]="loading">
+          [disabled]="loading || authService.isFacebookLoading || authService.isGoogleLoading">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
-            alt="Facebook" width="20" height="20" class="me-2"> Login with Facebook
+            alt="Facebook" width="20" height="20" class="me-2" *ngIf="!authService.isFacebookLoading">
+          <i *ngIf="authService.isFacebookLoading" class="spinner-border spinner-border-sm me-2"></i>
+          {{ authService.isFacebookLoading ? 'Processing...' : 'Login with Facebook' }}
         </button>
       </div>
     </div>
