--- a/src/app/jobs-list/jobs-list.component.css
+++ b/src/app/jobs-list/jobs-list.component.css
@@ -1352,10 +1352,10 @@ html {
     height: 24px;
   }
 
-  .filter-section {
-    /* margin-bottom: 32px;
-    padding-bottom: 24px; */
-  }
+  /* .filter-section {
+    margin-bottom: 32px;
+    padding-bottom: 24px;
+  } */
 
   .filter-header {
     margin-bottom: 20px;
