--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="form-group mt-4" style="position: relative;">
-      <button type="submit" class="btn btn-submit" [disabled]="form.invalid || loading" style="cursor: pointer"
+      <button type="submit" class="btn btn-submit" [disabled]="form.invalid || loading || authService.isFacebookLoading || authService.isGoogleLoading" style="cursor: pointer"
         (click)="login()">
         <span *ngIf="loading" class="spinner-border spinner-border-sm me-2" role="status"></span>
         {{ loading ? 'Logging In...' : 'Login' }}
