--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -17,9 +17,9 @@
           </p>
           <!-- Search Form -->
           <div class="heroSearch d-flex flex-column flex-md-row gap-md-3">
-            <div class="flex-fill customSelectWrapper" [class.open]="isSelectOpen1" (click)="toggleSelectOpen()">
+            <div class="flex-fill customSelectWrapper" [class.open]="isSelectOpen" (click)="toggleSelectOpen()">
               <label for="job_category" class="form-label">Job Categories</label>
-              <select id="job_category" class="formSelect form-control search-input" (blur)="isSelectOpen1 = false"
+              <select id="job_category" class="formSelect form-control search-input" (blur)="isSelectOpen = false"
                 [(ngModel)]="searchCategory">
                 <!-- default placeholder -->
                 <option [ngValue]="null" disabled [selected]="searchCategory === null">Select an option</option>
@@ -54,7 +54,7 @@
             </div>
             <hr />
             <div class="d-flex align-items-end">
-              <button class="searchBtn" (click)="onSearch()" [disabled]="isSearching">
+              <button class="searchBtn" (click)="onSearch()" [disabled]="isSearching"  aria-label="search button">
                 <div class="spinner-border spinner-border-sm me-2" *ngIf="isSearching"></div>
                 <span *ngIf="isSearching">Searching...</span>
                 <span *ngIf="!isSearching">SEARCH</span>
@@ -197,27 +197,27 @@
           </div> -->
 
           <!-- Tags Filter -->
-          <!-- <div class="filter-section">
+          <div class="filter-section">
             <div class="filter-header" (click)="toggleSection('tags')">
               <h6>Tags</h6>
-              <span class="toggle-icon" [class.expanded]="expandedSections?.tags">
+              <span class="toggle-icon" [class.expanded]="expandedSections.tags">
                 <i class="fas fa-minus" *ngIf="expandedSections?.tags"></i>
                 <i class="fas fa-plus" *ngIf="!expandedSections?.tags"></i>
               </span>
             </div>
-            <div class="filter-content" [class.expanded]="expandedSections?.tags">
+            <div class="filter-content" [class.expanded]="expandedSections.tags">
               <div class="tags-grid">
                 <button *ngFor="let tag of getVisibleTags()" type="button" class="tag-button"
                   [class.active]="tag.selected" (click)="toggleTag(tag)">
-                  {{ tag.name }}
+                  {{ tag.name }} {{ tag.count }}
                 </button>
               </div>
-              <button type="button" class="show-more-btn" (click)="toggleShowMoreTags()" *ngIf="allTags.length > 12">
+              <button type="button" class="show-more-btn" (click)="toggleShowMoreTags()" *ngIf="tags.length > 12">
                 <i class="fas fa-minus me-2"></i>
                 {{ showMoreTags ? 'Show Less' : 'Show More' }}
               </button>
             </div>
-          </div> -->
+          </div>
 
           <!-- Normal reset button -->
           <button (click)="resetFilters()" class="btn btn-reset w-100 mt-3">Reset Filters</button>
@@ -478,27 +478,28 @@
           </div> -->
 
               <!-- Tags Filter -->
-              <!-- <div class="filter-section">
-            <div class="filter-header" (click)="toggleSection('tags')">
-              <h6>Tags</h6>
-              <span class="toggle-icon" [class.expanded]="expandedSections?.tags">
-                <i class="fas fa-minus" *ngIf="expandedSections?.tags"></i>
-                <i class="fas fa-plus" *ngIf="!expandedSections?.tags"></i>
-              </span>
-            </div>
-            <div class="filter-content" [class.expanded]="expandedSections?.tags">
-              <div class="tags-grid">
-                <button *ngFor="let tag of getVisibleTags()" type="button" class="tag-button"
-                  [class.active]="tag.selected" (click)="toggleTag(tag)">
-                  {{ tag.name }}
-                </button>
+              <div class="filter-section">
+                <div class="filter-header" (click)="toggleSection('tags')">
+                  <h6>Tags</h6>
+                  <span class="toggle-icon" [class.expanded]="expandedSections.tags">
+                    <i class="fas fa-minus" *ngIf="expandedSections.tags"></i>
+                    <i class="fas fa-plus" *ngIf="!expandedSections.tags"></i>
+                  </span>
+                </div>
+                <div class="filter-content" [class.expanded]="expandedSections.tags">
+                  <div class="tags-grid">
+                    <button *ngFor="let tag of getVisibleTags()" type="button" class="tag-button"
+                      [class.active]="tag.selected" (click)="toggleTag(tag)">
+                      {{ tag.name }} {{ tag.count }}
+                    </button>
+                  </div>
+                  <button type="button" class="show-more-btn" (click)="toggleShowMoreTags()" *ngIf="tags.length > 12">
+                    <i class="fas fa-minus me-2" *ngIf="showMoreTags"></i>
+                    <i class="fas fa-plus me-2" *ngIf="!showMoreTags"></i>
+                    {{ showMoreTags ? 'Show Less' : 'Show More' }}
+                  </button>
+                </div>
               </div>
-              <button type="button" class="show-more-btn" (click)="toggleShowMoreTags()" *ngIf="allTags.length > 12">
-                <i class="fas fa-minus me-2"></i>
-                {{ showMoreTags ? 'Show Less' : 'Show More' }}
-              </button>
-            </div>
-          </div> -->
 
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" (click)="resetFiltersAndToggleModal()">
